Update FlightPotionFabric.java